# ot-based-graph-partitioning

./: .gitignore  README.md  figure_table_generation.ipynb  methods_example.ipynb  pyproject.toml  requirements.txt  simulations.ipynb
src/: distances.py  shapes.py
src/clustering/: __init__.py  gw_clustering.py  init_strategies.py  kmeans.py  utils.py
src/evaluation/: __init__.py  metrics.py  testing.py  utils.py
src/otgp/: shapes.py
src/otgp/clustering/: gw_clustering.py  init_strategies.py  kmeans.py
src/otgp/evaluation/: metrics.py  testing.py
src/otgp/simulation/: graph.py
src/simulation/: __init__.py  attributes.py  graph.py  utils.py
